# rebiber

./: .gitignore  README.md  pyproject.toml
rebiber/: __init__.py  abbr.tsv  bib2json.py  normalize.py
scripts/: add_conf.sh
